--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,32 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Lad batteriene på Norefjell
-  id: lad-batteriene-på-norefjell
-  location: Norefjell Ski & Spa, Norefjell, Buskerud, Norge
-  description: Prisvinnende spahotell i naturskjønne omgivelser, inkludert frokost, matrabatt og ekstragoder
-  price: 1350
-  price-description: per rom per natt
-  saved: 47
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32900/e982c4f8_7e71_4ad4_95de_bcf5411485b4.jpg
-  link: https://no.secretescapes.com/lad-batteriene-paa-norefjell-norefjell-ski-and-spa-norefjell-buskerud-norge-no-no/sale
-  sale-id: 94610
-  domestic: true
-
-- title: Sjarmerende hotell på Frogner
-  id: sjarmerende-hotell-på-frogner
-  location: Clarion Collection Hotel Gabelshus, Oslo
-  description: Elegant hotell i rolig gate på Frogner, inkludert frokostbuffet og kveldsmat
-  price: 994
-  price-description: per rom per natt
-  saved: 38
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/48751/11007c33_f05a_46d9_bcef_971128507c1c.jpg
-  link: https://no.secretescapes.com/sjarmerende-hotell-paa-frogner-clarion-collection-hotel-gabelshus-oslo-no/sale
-  sale-id: 94714
-  domestic: true
-
 - title: Sentralt med svømmebasseng i Oslo
   id: sentralt-med-svømmebasseng-i-oslo
   location: Radisson Blu Scandinavia Hotel, Oslo
@@ -35,10 +9,22 @@
   price: 1465
   price-description: per rom per natt
   saved: 47
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95329/a62e0a7a_d8c8_437e_8341_b45496c16189.jpg
   link: https://no.secretescapes.com/sentralt-med-svoemmebasseng-i-oslo-radisson-blu-scandinavia-hotel-oslo/sale
   sale-id: 95329
+  domestic: true
+
+- title: Slapp av på spa i Son
+  location: Son Spa, Son, Akershus, Norge
+  description: Sett av tid til deg selv på Son Spa, inkludert frokost og adgang til spa
+  price: 602
+  price-description: per person. Basert på 2 personer per rom per natt
+  saved: 29
+  expires: 2019/06/18
+  image: https://d2g6qre7voj6kv.cloudfront.net/hotels/63/6d1297d0_aa9d_4582_aa82_96bee3fdd1d0.jpg?auto=format,compress
+  link: https://no.secretescapes.com/slapp-av-paa-spa-i-son-son-spa-son-akershus-no-no/sale-hotel
+  sale-id: A2877
   domestic: true
 
 ################################################################################
@@ -52,7 +38,7 @@
   price: 1451
   price-description: per rom per natt
   saved: 50
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
   link: https://no.secretescapes.com/femstjerners-luksus-paa-mallorca-gpro-valparaiso-palace-and-spa-palma-de-mallorca-spania2/sale
   sale-id: 95067
@@ -65,7 +51,7 @@
   price: 1023
   price-description: per rom per natt
   saved: 61
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/65890/b4f2cf0a_f6ea_4661_9173_bd8f2b4267ea.jpg
   link: https://no.secretescapes.com/luksurioest-golfresort-i-tidligere-kloster-i-monasteri-golf-resort-siracusa-sicilia-italia-1/sale
   sale-id: 95177
@@ -78,62 +64,10 @@
   price: 2418
   price-description: per rom per natt
   saved: 57
-  expires: 2019/06/05
+  expires: 2019/06/13
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/192483b6_5605_429d_9363_db368ad4dc60.jpg
   link: https://no.secretescapes.com/fantastiske-fitzrovia-the-mandrake-london-england-1/sale
   sale-id: 94946
-  domestic: false
-
-- title: Elegant boutiquehotell i hjertet av Madrid
-  id: elegant-boutiquehotell-i-hjertet-av-madrid
-  location: The Walt Madrid, Madrid, Spania
-  description: Stilig hotell i nærheten av fasjonable Gran Via og en rekke restauranter og spennende uteliv
-  price: 1024
-  price-description: per rom per natt
-  saved: 40
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88549/39983cf1_3d50_42af_812a_89cb00e5fa1a.jpg
-  link: https://no.secretescapes.com/elegant-boutiquehotell-i-hjertet-av-madrid-the-walt-madrid-madrid-spania-1/sale
-  sale-id: 95133
-  domestic: false
-
-- title: Familiedrøm på Mallorca
-  id: familiedrøm-på-mallorca
-  location: Fergus Club Europa, Paguera, Spania
-  description: Senk skuldrene og nyt familieferien på sports- og familiehotell tett på golfbaner og strender
-  price: 1072
-  price-description: per room per natt
-  saved: 43
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73722/bbb0bd8d_8068_468b_b1ff_dfb4200e6962.jpg
-  link: https://no.secretescapes.com/familiedroem-paa-mallorca-fergus-club-europa-paguera-spania/sale
-  sale-id: 95187
-  domestic: false
-
-- title: Stilig boutiquehotell i Stockholm
-  id: stilig-boutiquehotell-i-stockholm
-  location: NOFO Hotel, Stockholm, Sverige
-  description: Opphold på et stilig boutiquehotell i Stockholm, inkludert frokostbuffet
-  price: 1086
-  price-description: per rom per natt
-  saved: 41
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94515/250228e4_c49f_4dbb_b659_8b298e450d25.jpg
-  link: https://no.secretescapes.com/stilig-boutiquehotell-i-stockholm-nofo-hotel-stockholm-sverige-no-no/sale
-  sale-id: 94515
-  domestic: false
-
-- title: Deilig langhelg i Stockholm
-  id: deilig-langhelg-i-stockholm
-  location: Elite Palace Hotel, Stockholm, Sverige
-  description: Luksuriøst opphold i vakre Vasastan, inkludert frokost
-  price: 724
-  price-description: per rom per natt
-  saved: 34
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91573/6cff9385_179a_44a5_9493_05399d924205.jpg
-  link: https://no.secretescapes.com/deilig-langhelg-i-stockholm-elite-palace-hotel-stockholm-sverige-1/sale
-  sale-id: 94907
   domestic: false
 
 - title: Elegant designhotell på Stureplan
@@ -143,7 +77,7 @@
   price: 1005
   price-description: per rom per natt
   saved: 34
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
   link: https://no.secretescapes.com/elegant-designhotell-paa-stureplan-story-hotel-riddargatan-stockholm-sverige-1/sale
   sale-id: 95328
@@ -156,21 +90,34 @@
   price: 871
   price-description: per rom per natt
   saved: 40
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
   link: https://no.secretescapes.com/opplev-roma-fra-elegant-hotell-hotel-pulitzer-roma-roma-italia-1/sale
   sale-id: 95364
   domestic: false
 
-- title: Velvære på toppen av Toscana
-  id: velvære-på-toppen-av-toscana
-  location: Il Castelfalfi, Castelfalfi, Italia
-  description: Luksuriøs velvære på den rolige toskanske landsbygda, inkludert frokost m.m.
-  price: 2029
+- title: Nytt og trendy hotell i East End
+  id: nytt-og-trendy-hotell-i-east-end
+  location: New Road Hote1, London, England
+  description: Omfavn industriell komfort på splitter nytt hotell ved Tower of London og Brick Lane, inkl. frokost
+  price: 983
   price-description: per rom per natt
-  saved: 37
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52547/37fe61be_bc21_4bc8_be32_0bce4413b623.jpg
-  link: https://no.secretescapes.com/velvaere-paa-toppen-av-toscana-il-castelfalfi-castelfalfi-italia-1/sale
-  sale-id: 94624
+  saved: 36
+  expires: 2019/06/19
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95863/8077a4f0_e9e3_4544_a46c_2baff9ed2cef.jpg
+  link: https://no.secretescapes.com/nytt-og-trendy-hotell-i-east-end-new-road-hote1-london-england-no/sale
+  sale-id: 95863
+  domestic: false
+
+- title: Skandinavisk design i spennende bydel
+  id: skandinavisk-design-i-spennende-bydel
+  location: Elite Hotel Carolina Tower, Stockholm, Sverige
+  description: Sjekk inn på et moderne hotell, kun 15 minutter nord for Stockholm, inkl. frokostbuffet
+  price: 729
+  price-description: per rom per natt
+  saved: 41
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64357/fd69d8b8_4cf3_44fe_93e1_97006f72d151.jpg
+  link: https://no.secretescapes.com/skandinavisk-design-i-spennende-bydel-elite-hotel-carolina-tower-stockholm-sverige-no-no/sale
+  sale-id: 95634
   domestic: false
